# cablemanagement

./: .gitignore  ChangeLog.md  LICENSE  README.md  cablemanagement.cabal  stack-browser.yaml  stack.yaml
benchmark/: CriterionShim.hs  FovBenchmarks.hs  LevelBenchmarks.hs  Main.hs
cbits/: terminal.c
exe/: Main.hs
src/CM/: AnimatedTextIO.hs  ArrayLevel.hs  Chain.hs  Coords.hs  HGameLauncher.hs  ImapLevel.hs  JavascriptTextIO.hs  KeyInput.hs  LevelLike.hs  LevelRender.hs  LiftLevel.hs  MonotonicTime.hs  PortableTextIO.hs  Portal.hs  TerminalTextIO.hs  TextIO.hs  TileWorld.hs  WorldLike.hs
test/: Main.hs
test/CM/Chain/: Tests.hs
test/CM/Coords/: Tests.hs
test/CM/TextIO/: Tests.hs
