name:                cablemanagement
version:             0.1.0.0
synopsis:            Cable Management The Roguelike
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag build-toys
  default: False
  description: Build toy executable


library
  exposed-modules:     CM.Coords
                       CM.ArrayLevel
                       CM.AnimatedTextIO
                       CM.ImapLevel
                       CM.KeyInput
                       CM.LevelLike
                       CM.LevelRender
                       CM.LiftLevel
                       CM.Portal
                       CM.TileWorld
                       CM.TextIO
                       CM.MonotonicTime
                       CM.WorldLike
                       CM.PortableTextIO
                       CM.Chain
  if !impl(ghcjs)
    exposed-modules:   CM.TerminalTextIO
    c-sources:         cbits/terminal.c
  else
    exposed-modules:   CM.JavascriptTextIO
    build-depends:     ghcjs-base
    cpp-options:       -DGHCJS
  build-depends:       ansi-terminal
                      ,array
                      ,base >=4.9 && <5.0
                      ,bytestring
                      ,clock
                      ,containers
                      ,exceptions
                      ,data-default-class
                      ,primitive
                      ,stm
                      ,text
                      ,transformers
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  default-language:    Haskell2010

executable cablemanagement
  main-is:             Main.hs
  if flag(build-toys)
    buildable: True
  else
    buildable: False
  build-depends:       base >=4.9 && <5.0, cablemanagement, random, transformers
  hs-source-dirs:      exe
  ghc-options:         -Wall -fno-warn-name-shadowing -O2 -rtsopts
  default-language:    Haskell2010

test-suite cablemanagement-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       CM.TextIO.Tests
                       CM.Chain.Tests
                       CM.Coords.Tests
  build-depends:       base >=4.9 && <5.0,
                       cablemanagement,
                       test-framework,
                       test-framework-quickcheck2,
                       QuickCheck
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-orphans -O2 -rtsopts
  default-language:    Haskell2010

benchmark cablemanagement-benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       FovBenchmarks
                       LevelBenchmarks
                       CriterionShim
  build-depends:       base >=4.9 && <5.0,
                       cablemanagement,
                       data-default-class,
                       transformers
  if !impl(ghcjs)
    build-depends:     criterion
  else
    build-depends:     time
    cpp-options:       -DGHCJS
  hs-source-dirs:      benchmark
  ghc-options:         -Wall -fno-warn-name-shadowing -O2 -rtsopts
  default-language:    Haskell2010
